@@ -1,7 +1,6 @@
 package net.foxyas.changedaddon.procedures;
 
 import net.foxyas.changedaddon.entity.mobs.FoxyasEntity;
-import net.foxyas.changedaddon.init.ChangedAddonGameRules;
 import net.foxyas.changedaddon.init.ChangedAddonItems;
 import net.foxyas.changedaddon.network.ChangedAddonModVariables;
 import net.ltxprogrammer.changed.entity.variant.TransfurVariantInstance;
@@ -16,7 +15,6 @@ import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
@@ -41,19 +39,15 @@ public class SmallTickUpdateProcedure {
         }
     }
 
-    public static void execute(LevelAccessor world, Entity entity) {
-        execute(null, world, entity);
-    }
-
-    private static void execute(@Nullable Event event, LevelAccessor world, Entity entity) {
+    private static void execute(@Nullable Event ignoredEvent, LevelAccessor world, Entity entity) {
         if (entity == null)
             return;
 
-        final Vec3 _center = new Vec3(entity.getX(), entity.getY(), entity.getZ());
-        List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(2), e -> true)
-                .stream().sorted(Comparator.comparingDouble(e -> e.distanceToSqr(_center))).collect(Collectors.toList());
-        for (Entity entityiterator : _entfound) {
-            if (entityiterator != entity && entityiterator instanceof FoxyasEntity) {
+        final Vec3 center = new Vec3(entity.getX(), entity.getY(), entity.getZ());
+        List<Entity> entityList = world.getEntitiesOfClass(Entity.class, new AABB(center, center).inflate(2), e -> true)
+                .stream().sorted(Comparator.comparingDouble(e -> e.distanceToSqr(center))).toList();
+        for (Entity entityIterator : entityList) {
+            if (entityIterator != entity && entityIterator instanceof FoxyasEntity) {
                 if (entity instanceof ServerPlayer _player) {
                     Advancement _adv = _player.server.getAdvancements().getAdvancement(new ResourceLocation("changed_addon:gooey_friend"));
                     AdvancementProgress _ap = _player.getAdvancements().getOrStartProgress(Objects.requireNonNull(_adv));
@@ -73,69 +67,9 @@ public class SmallTickUpdateProcedure {
                 });
             }
         }
-
-        AttributeModifier Exp009Buff_attack = new AttributeModifier(UUID.fromString("17c5b5cf-bdae-4191-84d1-433db7cba751"), "transfur_stats", 4, AttributeModifier.Operation.ADDITION);
-        AttributeModifier Exp009Buff_defense = new AttributeModifier(UUID.fromString("17c5b5cf-bdae-4191-84d1-433db7cba752"), "transfur_stats", 8, AttributeModifier.Operation.ADDITION);
-        AttributeModifier Exp009Buff_armor = new AttributeModifier(UUID.fromString("17c5b5cf-bdae-4191-84d1-433db7cba753"), "transfur_stats", 6, AttributeModifier.Operation.ADDITION);
-
-        if (entity instanceof Player player) {
-            TransfurVariantInstance<?> variant = ProcessTransfur.getPlayerTransfurVariant(player);
-            String formId = variant != null ? variant.getFormId().toString() : "";
-
-            boolean isTransfurred = variant != null;
-            boolean isForm009Boss = formId.equals("changed_addon:form_experiment009_boss");
-            boolean isForm010Boss = formId.equals("changed_addon:form_experiment_10_boss");
-
-            if (world.getLevelData().getGameRules().getBoolean(ChangedAddonGameRules.NEED_PERMISSION_FOR_BOSS_TRANSFUR)) {
-                if (isTransfurred && isForm009Boss && !getPlayerVars(entity).Exp009TransfurAllowed) {
-                    Exp009TransfurProcedure.execute(entity);
-                }
-                if (isTransfurred && isForm010Boss && !getPlayerVars(entity).Exp10TransfurAllowed) {
-                    Exp009TransfurProcedure.exp10(entity);
-                }
-            }
-
-            if (isTransfurred && getPlayerVars(entity).Exp009Buff) {
-                addModifier((LivingEntity) entity, Attributes.ATTACK_DAMAGE, Exp009Buff_attack);
-                addModifier((LivingEntity) entity, Attributes.ARMOR, Exp009Buff_defense);
-                addModifier((LivingEntity) entity, Attributes.ARMOR_TOUGHNESS, Exp009Buff_armor);
-            } else {
-                removeModifier((LivingEntity) entity, Attributes.ATTACK_DAMAGE, Exp009Buff_attack);
-                removeModifier((LivingEntity) entity, Attributes.ARMOR, Exp009Buff_defense);
-                removeModifier((LivingEntity) entity, Attributes.ARMOR_TOUGHNESS, Exp009Buff_armor);
-            }
-
-            boolean holdingTotem = ((LivingEntity) entity).getMainHandItem().getItem() == ChangedAddonItems.TRANSFUR_TOTEM.get()
-                    || ((LivingEntity) entity).getOffhandItem().getItem() == ChangedAddonItems.TRANSFUR_TOTEM.get();
-
-            if (holdingTotem && isTransfurred && !getPlayerVars(entity).Exp009Buff) {
-                setExp009Buff(entity, true);
-            } else if (!holdingTotem && getPlayerVars(entity).Exp009Buff) {
-                setExp009Buff(entity, false);
-            } else if (!isTransfurred && getPlayerVars(entity).Exp009Buff) {
-                setExp009Buff(entity, false);
-            }
-        }
     }
 
     private static ChangedAddonModVariables.PlayerVariables getPlayerVars(Entity entity) {
         return entity.getCapability(ChangedAddonModVariables.PLAYER_VARIABLES_CAPABILITY, null).orElse(new ChangedAddonModVariables.PlayerVariables());
-    }
-
-    private static void setExp009Buff(Entity entity, boolean value) {
-        entity.getCapability(ChangedAddonModVariables.PLAYER_VARIABLES_CAPABILITY, null).ifPresent(capability -> {
-            capability.Exp009Buff = value;
-            capability.syncPlayerVariables(entity);
-        });
-    }
-
-    private static void addModifier(LivingEntity entity, Attribute attribute, AttributeModifier modifier) {
-        if (!Objects.requireNonNull(entity.getAttribute(attribute)).hasModifier(modifier)) {
-            Objects.requireNonNull(entity.getAttribute(attribute)).addTransientModifier(modifier);
-        }
-    }
-
-    private static void removeModifier(LivingEntity entity, Attribute attribute, AttributeModifier modifier) {
-        Objects.requireNonNull(entity.getAttribute(attribute)).removeModifier(modifier);
     }
 }
